...
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/journalView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="-16dp"
        android:layout_marginBottom="8dp"
...
